tests/invalid/runtime/io_read_size_invalid.pts
import Io;

function main() : void {
    var f = Io.open("io_read_size.txt", "w");
    f.write("x");
    f.close();

    var r = Io.open("io_read_size.txt", "r");
    r.read(0);
}
